--- a/web/empty.html
+++ b/web/empty.html
@@ -1,13 +1,64 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="">
-    <title>Minimal base.html</title>
-</head>
-<body>
+    <meta name="description" content="description">
+    <title>Title</title>
+    <style type="text/css">
+        body {
+            margin: 40px auto;
+            max-width: 650px;
+            line-height: 1.6;
+            font-size: 18px;
+            color: #444;
+            padding: 0 10px
+        }
 
+        h1, h2, h3 {
+            line-height: 1.2
+        }
+    </style>
+</head>
+
+<body>
+    <header>
+        <h1>Title</h1>
+        <aside>Something important</aside>
+    </header>
+    <main>
+        <h1>Topic 1</h1>
+        <p>Some lorem ipsum lol</p>
+
+        <article>
+            <h2>Subtopic 1</h2>
+            <p>Some lorem ipsum lol</p>
+        </article>
+
+        <article>
+            <h2>Subtopic 2</h2>
+            <p>Some lorem ipsum lol</p>
+        </article>
+
+        <h1>Topic 2</h1>
+        <p>Some lorem ipsum lol</p>
+
+        <article>
+            <h2>Subtopic 1</h2>
+            <p>Some lorem ipsum lol</p>
+        </article>
+
+        <article>
+            <h2>Subtopic 2</h2>
+            <p>Some lorem ipsum lol</p>
+        </article>
+    </main>
+    <footer>
+        <p>Author: fullbyte<br>
+            <a href="https://twitter.com/ZeroGdoubleD">Twitter</a></p>
+    </footer>
 </body>
+
 </html>
